--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,11 @@
   width: 5% !important;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 900px) {
   .table,
+  tr,
   .task-remain {
-    width: 100% !important;
+    width: 50% !important;
   }
 }
 .jumbotron {
